<resources>
    <string name="app_name">Beem</string>
    <string name="OkButton">OK</string>
    <string name="ClearButton">Clear</string>
    <string name="CancelButton">Cancel</string>
    <string name="AcceptButton">Authorize</string>
    <string name="RefuseButton">Deny</string>
    <string name="JabberID">Jabber ID</string>
    <string name="Password">Password</string>
    <string name="Continue">Continue</string>
    <string name="AccountConfigureManualConfiguration">Manual Configuration</string>
    <string name="BeemJabberID">JabberID</string>
    <string name="BeemApplicationConnect">Login…</string>
    <string name="BeemServiceDescription">Use Beem Services</string>
    <string name="BeemServiceCreated">Beem service created</string>
    <string name="BeemServiceDestroyed">Beem service eliminated</string>
    <string name="CDChat">Chat</string>
    <string name="CDCall">Call</string>
    <string name="CDInfos">Manage User</string>
    <string name="AddCActTitle">Beem - Add a contact</string>
    <string name="AddCLogin">Username</string>
    <string name="AddCAlias">Alias</string>
    <string name="AddCGroup">Group</string>
    <string name="AddCOkButton">Add</string>
    <string name="AddCContactAdded">Contact added</string>
    <string name="AddCContactAddedError">Error Contact not added</string>
    <string name="AddCContactAddedLoginError">Error Login</string>
    <string name="AddCContactAlready">Contact already exist</string>
    <string name="AddCBadForm">Fad formatted contact</string>
    <string name="ChangeStatusActTitle">Beem - Change my status</string>
    <string name="ChangeStatusType">My status</string>
    <string name="ChangeStatusMessage">My status message</string>
    <string name="OpenContactList">Open contact list</string>
    <string name="my_avatar">My avatar</string>
    <string name="select_avatar">Choose your avatar</string>
    <string name="take_photo">Take a photo</string>
    <string name="pick_photo">Select a picture</string>
    <string name="delete_avatar">No avatar</string>
    <string name="photoPickerNotFoundText">Photo picker not found</string>
    <string name="MenuAddContact">Add this contact</string>
    <string name="MenuAccountAbout">About C.A.T. for Android</string>
    <string name="MenuAccountCreate">Contacto creado</string>
    <string name="MenuConnection">Edit contact</string>
    <string name="ChangeStatusOk">Update contact</string>
    <string name="ChangeStatusNoChange">No status changed</string>
    <string name="SettingsText">Edit username</string>
    <string name="SettingsPassword">Edit password</string>
    <string name="login_username_info_default">test@test.com</string>
    <string name="SettingsProxy">Proxy</string>
    <string name="SettingsProxyProxy">Use a proxy server</string>
    <string name="SettingsProxySummary">Login through a proxy server</string>
    <string name="SettingsProxyType">Protocol</string>
    <string name="SettingsProxyTypeSummary">Choose the proxy server type</string>
    <string name="SettingsProxyServer">Edit proxy server address</string>
    <string name="SettingsProxyPort">Edit proxy server port</string>
    <string name="SettingsProxyUser">Optional, allow to authenticate yourself on the proxy server</string>
    <string name="SettingsProxyPassword">Optional, allow to authenticate yourself on the proxy server</string>
    <string name="SettingsAdvanced">Advanced</string>
    <string name="SettingsAdvancedOptions">Specific server option</string>
    <string name="SettingsAdvancedRecoDelay">Modify reconnection delay</string>
    <string name="SettingsAdvancedSpecOpt">Check this box if you want to use a specific server for your connection</string>
    <string name="SettingsAdvancedAddOpt">Edit the server address</string>
    <string name="SettingsAdvancedPortOpt">Edit the server port</string>
    <string name="SettingsResourceTitle">Resource</string>
    <string name="SettingsPriorityTitle">Priority</string>
    <string name="SettingsResourceSummary">Set the XMPP resource of your client </string>
    <string name="SettingsPrioritySummary">Set the priority of your client</string>
    <string name="contact_list_preferences">Buddy list</string>
    <string name="contact_list_preferences_sum">A set of display options for your buddy list</string>
    <string name="CLP_hide_groups">Hide groups</string>
    <string name="CLP_hide_groups_sum">Check this option to hide groups</string>
    <string name="CLP_show_jid">Show JID</string>
    <string name="CLP_show_jid_sum">Check this option to always show Contact\'s JID</string>
    <string name="CLP_hidden_contact">Hide buddies</string>
    <string name="CLP_hidden_contact_sum">Check this option to hide unconnected buddies</string>
    <string name="settings_account_username">Username (JID)</string>
    <string name="settings_account_password">Password</string>
    <string name="settings_account_server">Server</string>
    <string name="settings_account_port">Port</string>
    <string name="settings_advanced_service_behaviour">Service behaviour</string>
    <string name="settings_advanced_sum">A set of options for advanced users</string>
    <string name="settings_xmpp_server">Address</string>
    <string name="comments_xmpp_server">example.com</string>
    <string name="settings_xmpp_port">Port</string>
    <string name="settings_xmpp_use_tls">Require SSL/TLS</string>
    <string name="settings_reco_delay">Reconnection delay</string>
    <string name="comments_xmpp_port">Default: 5222</string>
    <string name="settings_proxy_sum">Settings for proxy usage</string>
    <string name="settings_proxy_use">Connect using a proxy</string>
    <string name="settings_proxy_type_prompt">Choose a type of proxy</string>
    <string name="settings_proxy_server">Server</string>
    <string name="settings_proxy_port">Port</string>
    <string name="comments_proxy_port">Default: 1080</string>
    <string name="settings_proxy_username">Username</string>
    <string name="settings_proxy_password">Password</string>
    <string name="away_chk_title">Enable Auto-away</string>
    <string name="away_chk_sum">Change status to Away when the screen is turned off</string>
    <string name="away_message_title">Away message</string>
    <string name="away_message_sum">The away message that will be displayed</string>
    <string name="away_message_hint">I\'m away, my cellphone screen is off</string>
    <string name="notification_preferences">Notification settings</string>
    <string name="notification_enable_vibrate_title">Enable vibrate</string>
    <string name="notification_enable_vibrate_sum">Enable vibrate on incoming messages</string>
    <string name="notification_snd_title">Message ringtone</string>
    <string name="notification_snd_sum">Set your incoming message ringtone</string>
    <string name="settings_chat_compact">Chat compact</string>
    <string name="settings_chat_compact_sum">Set the chat windows compact</string>
    <string name="history">History</string>
    <string name="history_sum">Check this to save chats on the SDCard</string>
    <string name="chat_preferences">Chat</string>
    <string name="chat_preferences_sum">History, Layout size …</string>
    <string name="chat_history_path">History path</string>
    <string name="chat_history_path_sum">Chat conversations are saved in a folder on the SDCard</string>
    <string name="settings_smack_debug">Enable XMPP debug</string>
    <string name="settings_full_jid_login">Use my full JID as username</string>
    <string name="settings_full_jid_login_sum">Need by some server such as Google Talk</string>
    <string name="history_mount">The memory card must be mounted and writable to activate the History</string>
    <string name="history_on_off">Enable message history</string>
    <string name="SubscriptAccept">Subscription accepted</string>
    <string name="SubscriptError">Subscription error</string>
    <string name="SubscriptRefused">Subscription refused</string>
    <string name="SubscriptText">%s wants to add you to his/her buddy list. Do you want to authorize him/her?</string>
    <string name="SubscriptTitle">Authorize buddy?</string>
    <string name="BeemChatManagerNewMessage">You have a new message</string>
    <string name="BeemBroadcastReceiverDisconnect">You have been disconnected</string>
    <string name="AcceptContactRequest">%s has just added you to his/her buddy list.</string>
    <string name="AcceptContactRequestFrom">Authorize %s to contact you.</string>
    <string name="edit_settings_name">Settings</string>
    <string name="create_account_name">Create an account</string>
    <string name="contact_list_name">Contacts</string>
    <string name="user_info_name">User Info</string>
    <string name="login_tag">Registration</string>
    <string name="edit_settings_tag">Edit Settings</string>
    <string name="create_account_tag">Create Account</string>
    <string name="contact_list_tag">Contact List</string>
    <string name="button_create_account">New Account</string>
    <string name="button_create_login_account">Create login account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_error_dialog_title">Registration - Error</string>
    <string name="login_close_dialog_button">Close</string>
    <string name="login_menu_create_account">Create Account</string>
    <string name="login_menu_settings">Settings</string>
    <string name="login_menu_about">About</string>
    <string name="login_about_title">Beem %s - About</string>
    <string name="login_about_msg">Beem is an EPITECH Innovative Project. Visit us at
		http://www.beem-project.com !</string>
    <string name="login_about_button">Close</string>
    <string name="general_preferences">General preferences</string>
    <string name="user_preferences">Account (required)</string>
    <string name="user_preferences_advanced">User settings advanced (optional)</string>
    <string name="network_preferences">Network options</string>
    <string name="proxy_proxy_settings">Proxy settings</string>
    <string name="proxy_user_settings">Proxy settings</string>
    <string name="history_preferences">History</string>
    <string name="chat_layout_option">Chat layout</string>
    <string name="account_wizard_text1"><b>Welcome on BEEM.</b>\n\nYou have not configured an XMPP (Jabber) account yet.\nChoose one of the following options :</string>
    <string name="account_wizard_configure_text_1">Use an account store on the device</string>
    <string name="account_wizard_configure_text_2"><b>or</b></string>
    <string name="account_wizard_configure_text_3">Fill in the data for your existing account</string>
    <string name="account_wizard_settings_warn"><b>Warning: </b>Your settings are set to use a server proxy or a specific server hostname.</string>
    <string name="account_wizard_connection_failed"><b>Unable to authenticate your account. Please verify your credentials</b></string>
    <string name="account_wizard_select_account_btn">Choose an account</string>
    <string name="account_wizard_configure_account">I already have an account I want to use</string>
    <string name="account_wizard_create_account">I want to register for a new account</string>
    <string name="contact_list_menu_add_contact">Add a contact</string>
    <string name="contact_list_menu_status">Change status</string>
    <string name="contact_list_menu_settings">Settings</string>
    <string name="contact_list_menu_disconnect">Disconnect</string>
    <string name="userinfo_label_alias">Alias</string>
    <string name="userinfo_label_chg_group">Manage groups</string>
    <string name="userinfo_label_re_subscription">Resend invit</string>
    <string name="userinfo_label_block">Block</string>
    <string name="userinfo_label_delete">Delete</string>
    <string name="chat_menu_change_chat">Switch chat</string>
    <string name="company_logo">COMPANY LOGO</string>
</resources>