<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/company_logo"/>

            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:text="@string/account_wizard_configure_text_1"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/select_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/account_wizard_select_account_btn" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dip"
                    android:text="@string/account_wizard_configure_text_2"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/account_wizard_configure_text_3"
                android:textSize="18sp" />

            <TextView
                style="@style/Label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/JabberID" />

            <EditText
                android:id="@+id/account_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/JabberID"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                style="@style/Label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/settings_warn_label"
                style="@style/Label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/account_wizard_settings_warn"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:visibility="gone" />

            <EditText
                android:id="@+id/error_label"
                style="@style/Label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/account_wizard_connection_failed"
                android:textColor="@color/red"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar"
        android:gravity="right" >

        <Button
            android:id="@+id/manual_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:minWidth="100dp"
            android:text="@string/AccountConfigureManualConfiguration" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/button_indicator_next"
            android:enabled="false"
            android:minWidth="100dp"
            android:text="@string/Continue" />
    </RelativeLayout>

</LinearLayout>