<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo" 
                android:contentDescription="@string/company_logo"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingBottom="10dip"
                android:text="@string/account_wizard_text1"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/configure_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/configure_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_wizard_configure_account" />

                <RadioButton
                    android:id="@+id/create_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_wizard_create_account" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar"
        android:gravity="right|center_vertical" >

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/button_indicator_next"
            android:enabled="false"
            android:minWidth="100dp"
            android:text="@string/Continue" />
    </RelativeLayout>

</LinearLayout>